# usb_camera

./: CMakeLists.txt  package.xml
calib/: m2_calibration.yml  m2_calibration_240p.yml  m2_calibration_480p.yml  m2_hand_eye_samples_1.yaml  m2_hand_eye_samples_2.yaml  m2_hand_eye_samples_3.yaml  m2_hand_eye_samples_ori.yaml
launch/: camera_calib.launch  camera_pose_1.launch  camera_pose_2.launch  camera_pose_3.launch  camera_pose_ori.launch
scripts/: camera.py  camera2.py
src/: m2_camera_calib.cpp  opencv_video_camera.cpp  opencv_video_camera_2.cpp  stereo_calibration.cpp
