<?xml version="1.0"?>
<package format="2">
  <name>usb_camera</name>
  <version>0.0.0</version>
  <description>The usb_camera package</description>

  <maintainer email="yangyuxin2018@ict.ac.cn">yangyuxin</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
